force-app/main/default/objects/QuestionAnswer__c/QuestionAnswer__c.object-meta.xml
<CustomObject>
    <label>Question Answer</label>
    <pluralLabel>Question Answers</pluralLabel>
    <nameField>
        <label>Question Answer Name</label>
        <type>AutoNumber</type>
        <displayFormat>QA-{0000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Stores the requester's submitted answer for one QuestionMaster__c on one Case. Created exclusively by QuestionnaireDataController.submitAnswers in a single transaction.</description>
</CustomObject>