force-app/main/default/objects/QuestionAnswer__c/fields/Answer_Value__c.field-meta.xml
<CustomField>
    <fullName>Answer_Value__c</fullName>
    <label>Answer Value</label>
    <length>1300</length>
    <type>LongTextArea</type>
    <description>Holds the answer for any AnswerType__c: Boolean as "true"/"false", Date as ISO yyyy-MM-dd, Option as the selected value, Text as free text.</description>
</CustomField>