force-app/main/default/objects/QuestionAnswer__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Question Answers</relationshipLabel>
    <relationshipName>Question_Answers</relationshipName>
    <required>true</required>
    <type>Lookup</type>
    <deleteConstraint>Cascade</deleteConstraint>
</CustomField>