force-app/main/default/objects/QuestionAnswer__c/fields/Question_Id__c.field-meta.xml
<CustomField>
    <fullName>Question_Id__c</fullName>
    <label>Question Id</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
    <description>Denormalized copy of QuestionMaster__c.QuestionId__c captured at answer time, for quick reference/reporting.</description>
</CustomField>