force-app/main/default/objects/QuestionAnswer__c/fields/Question_Text__c.field-meta.xml
<CustomField>
    <fullName>Question_Text__c</fullName>
    <label>Question Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
    <description>Snapshot of the related QuestionMaster__c.QuestionText__c, copied by Apex (QuestionnaireDataController.submitAnswers) when the answer is created. NOTE: this cannot be a true formula field because Salesforce formulas cannot reference a Long Text Area field (QuestionText__c is LTA) - this is a platform limitation, not a design choice. The value is fixed at submit time, which also correctly preserves the exact wording the requester answered even if the master question is edited later.</description>
</CustomField>