force-app/main/default/objects/QuestionAnswer__c/fields/QuestionMaster__c.field-meta.xml
<CustomField>
    <fullName>QuestionMaster__c</fullName>
    <label>Question Master</label>
    <referenceTo>QuestionMaster__c</referenceTo>
    <relationshipLabel>Question Answers</relationshipLabel>
    <relationshipName>Question_Answers</relationshipName>
    <required>true</required>
    <type>Lookup</type>
    <deleteConstraint>Cascade</deleteConstraint>
</CustomField>